@@ -1,7 +1,7 @@
 AC_PREREQ(2.57)
 AC_INIT([SigScheme], [0.5.0], [mover@hct.zaq.ne.jp], [sigscheme])
 AC_CONFIG_SRCDIR([src/sigscheme.c])
-AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_HEADERS([src/config.h])
 AM_INIT_AUTOMAKE([1.8.3 dist-bzip2])
 
 # Checks for programs.
@@ -812,7 +812,7 @@ AC_ARG_ENABLE(debug,
 # FIXME: temporary solution
 AH_BOTTOM([
 /* FIXME: temporary solution */
-#include "src/config-old.h"])
+#include "config-old.h"])
 
 echo "--------------------------------------"
 echo "| SigScheme Configuration            |"
