@@ -12,6 +12,10 @@ Overview of changes from 0.5.0 (r3097 + private modifications)
   - Add experimental support for embedded platforms that lack writable static
     data, such as BREW or Symbian OS (see doc/global-obj.txt)
 
+* Fixes
+
+  - Make installed libsscm and header files workable
+
 
 Overview of changes from 0.5.0-alpha (r2902 + private modifications)
 ==
